<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FEECD6" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/eqtitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button1"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" >

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainbody"
                android:orientation="vertical" >
                
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp" >

                    <ToggleButton
                        android:id="@+id/toggleButton1"
                        android:layout_width="100dp"
                        android:layout_height="48dp"
                        android:background="#FFFFFF"
                        android:textOff="@string/max"
                        android:textOn="@string/min" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/objfunc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/resultStatus"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"                                                
                        android:text="@string/z"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subto"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </LinearLayout>

            </LinearLayout>

       	</HorizontalScrollView>

        
    </ScrollView>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Standard Form" />

</RelativeLayout>